@@ -55,6 +55,10 @@ function DBconnect(&$error) {
 					$error = 'Error connecting to database: '.trim(mysqli_connect_error());
 					$result = false;
 				}
+				elseif (mysqli_autocommit($DB['DB'], true) === false) {
+					$error = 'Error setting auto commit.';
+					$result = false;
+				}
 				else {
 					DBexecute('SET NAMES utf8');
 				}
